--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sails": "~0.12.11",
     "sails-disk": "~0.10.9",
     "sails-hook-autoreload": "^0.14.3",
+    "sails-hook-jwt-auth": "^1.0.3",
     "sails-mongo": "^0.12.2",
     "sails-seed": "^0.5.0"
   },
