--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "include-all": "^1.0.0",
     "moment": "^2.22.1",
     "rc": "1.0.1",
+    "request": "^2.87.0",
     "sails": "~0.12.11",
     "sails-disk": "~0.10.9",
     "sails-hook-autoreload": "^0.14.3",
